--- a/src/post/post.css
+++ b/src/post/post.css
@@ -55,3 +55,11 @@ margin-top:10px;
     -webkit-box-orient:vertical;
 
 }
+.post1{
+    width: 385px;
+    margin:0px 25px 40px 25px;
+}
+.post2{
+    width: 385px;
+    margin:0px 25px 40px 25px;
+}
