--- a/src/posts/posts.css
+++ b/src/posts/posts.css
@@ -1,6 +1,9 @@
 .posts{
-    flex:9;
-    display: flex;
+    flex:auto;
+    display:flex;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-top:20px;
+    
     
 }
